updated the handler and db
